FIX (form-elements) apply high z-index to datepicker
Override z-index to ensure datepicker appears above other content

--- a/src/patterns/form-elements/_form-elements.scss
+++ b/src/patterns/form-elements/_form-elements.scss
@@ -123,6 +123,10 @@
     }
 }
 
+.ui-datepicker {
+    z-index: 1000 !important;
+}
+
 .ui-datepicker .ui-state-default.ui-state-active {
     border: 1px solid #00539b;
     background: #00539b;
